fix bugs about login, register and account
